--- a/src/Stephane/BlogBundle/Resources/views/Article/index.html.twig
+++ b/src/Stephane/BlogBundle/Resources/views/Article/index.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
-
-{% block body -%}
+{% extends "StephaneBlogBundle::layout.html.twig" %}
+{% block title %} {{ parent() }} - Index{% endblock %}
+{% block stephane_body %}
     <h1>Article list</h1>
 
     <table class="records_list">
