--- a/src/Stephane/BlogBundle/Resources/views/Article/show.html.twig
+++ b/src/Stephane/BlogBundle/Resources/views/Article/show.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
-
-{% block body -%}
+{% extends "StephaneBlogBundle::layout.html.twig" %}
+{% block title %} {{ parent() }} - Index{% endblock %}
+{% block stephane_body %}
     <h1>Article</h1>
 
     <table class="record_properties">
