listener -manque couche service slugger

--- a/src/Stephane/BlogBundle/Resources/views/Article/new.html.twig
+++ b/src/Stephane/BlogBundle/Resources/views/Article/new.html.twig
@@ -3,7 +3,7 @@
 {% block stephane_body %}
     <h1>Article creation</h1>
 
-    {{ form(form) }}
+    {{ form(form.title) }}
 
         <ul class="record_actions">
     <li>
